--- a/frontend/src/app/features/configuracion/configuracion.component.html
+++ b/frontend/src/app/features/configuracion/configuracion.component.html
@@ -19,6 +19,11 @@
                class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
                 Configuración de Razas
             </a>
+            <a routerLink="productos"
+               routerLinkActive="border-blue-500 text-blue-600"
+               class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                Productos
+            </a>
         </nav>
     </div>
     
